{
    "name": "PlayerInputAction",
    "maps": [
        {
            "name": "Player",
            "id": "54052304-629b-42d9-813d-9ea543e383c2",
            "actions": [
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "bb046a0f-ed67-4c63-9ebd-54d994f25630",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPosition",
                    "type": "Value",
                    "id": "3266f794-6025-4fd4-9442-859a3994f9da",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0d887f0d-bb69-4bf0-8fcc-b5165945f054",
                    "path": "<Touchscreen>/Press",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e55f1f94-c52c-4db2-976c-9d95da9703fa",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "37e59f1f-a69f-479d-9b30-b0642ed1e47e",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "30dce24b-2c5e-49c3-979e-fcb8b851ecc2",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}